# klausweigele-ai-site

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: notification.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/contact/: route.ts
frontend/app/components/: CTASection.tsx  Contact.tsx  Footer.tsx  Hero.tsx  Process.tsx  Services.tsx  Showcase.tsx  TechStack.tsx  ValueGrid.tsx
