[project]
name = "ai_consulting_backend"
version = "0.1.0"
description = "Backend-API für Kontaktformulare und KI-Demos"
authors = [{ name = "Klaus Weigele" }]
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111,<0.112",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic[email]>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<0.28",
  "pydantic-settings>=2.2,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "httpx>=0.27,<0.28",
  "ruff>=0.4,<0.5"
]

[project.scripts]
app = "app.main:run"

[tool.uvicorn]
factory = true
app = "app.main:create_app"
host = "0.0.0.0"
port = 8000
reload = true
